--- a/ScrabbleSolver/Base.lproj/Main.storyboard
+++ b/ScrabbleSolver/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JxQ-Js-cSI">
-    <device id="ipad10_5" orientation="portrait" layout="fullscreen" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="A2C-Cn-KFs">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,17 +14,17 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ScrabbleSolver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lha-pZ-EEC">
-                                <rect key="frame" x="20" y="0.0" width="794" height="1112"/>
+                                <rect key="frame" x="20" y="44" width="374" height="818"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tuq-PL-lPO">
-                                        <rect key="frame" x="8" y="8" width="778" height="1096"/>
+                                        <rect key="frame" x="8" y="8" width="358" height="802"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N8a-X6-ZiK">
-                                        <rect key="frame" x="297.5" y="1017" width="199.5" height="54"/>
+                                        <rect key="frame" x="87.5" y="723" width="199.5" height="54"/>
                                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -74,10 +74,10 @@
                         <viewControllerLayoutGuide type="bottom" id="Dp6-pN-nZd"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="nvs-Mq-CNa" userLabel="Container View">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" id="zrQ-kN-Out">
+                            <view contentMode="scaleToFill" id="zrQ-kN-Out">
                                 <rect key="frame" x="20" y="44" width="374" height="818"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -105,18 +105,11 @@
             <objects>
                 <viewController id="JxQ-Js-cSI" customClass="ImageCaptureVC" customModule="ScrabbleSolver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Uha-w6-u1K">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CYT-Ll-Vmc" userLabel="Preview View">
-                                <rect key="frame" x="20" y="20" width="393" height="393"/>
-                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="CYT-Ll-Vmc" secondAttribute="height" multiplier="1:1" id="UUP-k1-BQZ"/>
-                                </constraints>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WH9-P2-Byo">
-                                <rect key="frame" x="20" y="981" width="794" height="111"/>
+                                <rect key="frame" x="20" y="752.5" width="374" height="89.5"/>
                                 <color key="backgroundColor" systemColor="systemGray2Color"/>
                                 <state key="normal" title="Button">
                                     <color key="titleColor" systemColor="darkTextColor"/>
@@ -125,27 +118,56 @@
                                     <action selector="buttonTapped:" destination="JxQ-Js-cSI" eventType="touchUpInside" id="p6R-ha-dpZ"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pr6-IS-eeE">
-                                <rect key="frame" x="421" y="20" width="393" height="393"/>
-                                <color key="backgroundColor" systemColor="systemRedColor"/>
-                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rYz-PB-ExG" userLabel="Preview Container">
+                                <rect key="frame" x="20" y="64" width="177" height="680.5"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CYT-Ll-Vmc" userLabel="Preview View">
+                                        <rect key="frame" x="8" y="8" width="169.5" height="169.5"/>
+                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="CYT-Ll-Vmc" secondAttribute="height" multiplier="1:1" id="o6j-Db-vQR"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="CYT-Ll-Vmc" secondAttribute="trailing" constant="-0.5" id="0DC-CW-dTQ"/>
+                                    <constraint firstItem="CYT-Ll-Vmc" firstAttribute="leading" secondItem="rYz-PB-ExG" secondAttribute="leading" constant="8" id="4hK-hj-KHz"/>
+                                    <constraint firstItem="CYT-Ll-Vmc" firstAttribute="top" secondItem="rYz-PB-ExG" secondAttribute="top" constant="8" id="eYc-ub-WUR"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V0h-PX-an9" userLabel="Capture View Container">
+                                <rect key="frame" x="210" y="64" width="184" height="680.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pr6-IS-eeE">
+                                        <rect key="frame" x="8" y="8" width="164.5" height="170"/>
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="Pr6-IS-eeE" firstAttribute="top" secondItem="V0h-PX-an9" secondAttribute="top" constant="8" id="CbG-Ye-J2F"/>
+                                    <constraint firstItem="Pr6-IS-eeE" firstAttribute="leading" secondItem="V0h-PX-an9" secondAttribute="leading" constant="8" id="pTH-eX-LYp"/>
+                                    <constraint firstAttribute="trailing" secondItem="Pr6-IS-eeE" secondAttribute="trailing" constant="11.5" id="wYI-jr-49S"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="846-nc-3iO"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="WH9-P2-Byo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="CYT-Ll-Vmc" secondAttribute="bottom" constant="8" id="5jw-Lh-bLJ"/>
-                            <constraint firstItem="Pr6-IS-eeE" firstAttribute="width" secondItem="CYT-Ll-Vmc" secondAttribute="width" id="6DP-qr-bVU"/>
+                            <constraint firstItem="rYz-PB-ExG" firstAttribute="width" secondItem="V0h-PX-an9" secondAttribute="width" multiplier="0.960317" id="91I-CK-z6C"/>
                             <constraint firstItem="WH9-P2-Byo" firstAttribute="height" secondItem="Uha-w6-u1K" secondAttribute="height" multiplier="0.1" id="PTD-dF-jj1"/>
-                            <constraint firstItem="CYT-Ll-Vmc" firstAttribute="top" secondItem="846-nc-3iO" secondAttribute="top" constant="20" id="Ukk-ya-VXB"/>
-                            <constraint firstItem="Pr6-IS-eeE" firstAttribute="leading" secondItem="CYT-Ll-Vmc" secondAttribute="trailing" priority="750" constant="8" id="Xj3-I9-ebn"/>
+                            <constraint firstItem="846-nc-3iO" firstAttribute="trailing" secondItem="V0h-PX-an9" secondAttribute="trailing" constant="20" id="RAf-Xm-UXQ"/>
+                            <constraint firstItem="WH9-P2-Byo" firstAttribute="top" secondItem="V0h-PX-an9" secondAttribute="bottom" constant="8" symbolic="YES" id="T89-VN-3N0"/>
                             <constraint firstItem="WH9-P2-Byo" firstAttribute="leading" secondItem="846-nc-3iO" secondAttribute="leading" constant="20" id="Ynq-Ho-RS4"/>
-                            <constraint firstItem="WH9-P2-Byo" firstAttribute="top" secondItem="Pr6-IS-eeE" secondAttribute="bottom" priority="750" constant="8" id="dAC-7d-Cuk"/>
+                            <constraint firstItem="rYz-PB-ExG" firstAttribute="leading" secondItem="846-nc-3iO" secondAttribute="leading" constant="20" id="ZNO-w8-01p"/>
                             <constraint firstItem="846-nc-3iO" firstAttribute="bottom" secondItem="WH9-P2-Byo" secondAttribute="bottom" constant="20" id="eSS-GF-B4x"/>
+                            <constraint firstItem="V0h-PX-an9" firstAttribute="top" secondItem="846-nc-3iO" secondAttribute="top" constant="20" id="fwm-Il-nNs"/>
                             <constraint firstItem="846-nc-3iO" firstAttribute="trailing" secondItem="WH9-P2-Byo" secondAttribute="trailing" constant="20" id="h2e-s1-yuy"/>
-                            <constraint firstItem="CYT-Ll-Vmc" firstAttribute="leading" secondItem="846-nc-3iO" secondAttribute="leading" constant="20" id="hom-LJ-jKn"/>
-                            <constraint firstItem="Pr6-IS-eeE" firstAttribute="top" secondItem="846-nc-3iO" secondAttribute="top" constant="20" id="kzJ-Du-W7L"/>
-                            <constraint firstItem="Pr6-IS-eeE" firstAttribute="height" secondItem="CYT-Ll-Vmc" secondAttribute="height" id="lbu-4A-HY2"/>
-                            <constraint firstItem="846-nc-3iO" firstAttribute="trailing" secondItem="Pr6-IS-eeE" secondAttribute="trailing" constant="20" id="wdh-5a-B3f"/>
+                            <constraint firstItem="CYT-Ll-Vmc" firstAttribute="height" secondItem="Pr6-IS-eeE" secondAttribute="height" multiplier="0.99734" id="iu7-Ey-QYM"/>
+                            <constraint firstItem="V0h-PX-an9" firstAttribute="leading" secondItem="rYz-PB-ExG" secondAttribute="trailing" constant="13" id="jRO-Fo-Jgv"/>
+                            <constraint firstItem="rYz-PB-ExG" firstAttribute="top" secondItem="846-nc-3iO" secondAttribute="top" constant="20" id="qHe-ib-lr2"/>
+                            <constraint firstItem="WH9-P2-Byo" firstAttribute="top" secondItem="rYz-PB-ExG" secondAttribute="bottom" constant="8" symbolic="YES" id="xZq-d8-wxO"/>
                         </constraints>
                     </view>
                     <connections>
@@ -156,6 +178,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xid-eJ-z7m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1192.0863309352519" y="146.22302158273382"/>
+        </scene>
+        <!--Frame Extractor View Controller-->
+        <scene sceneID="lzo-TR-0vd">
+            <objects>
+                <viewController id="A2C-Cn-KFs" customClass="FrameExtractorViewController" customModule="ScrabbleSolver" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kwa-jW-zkh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t28-lo-QgF">
+                                <rect key="frame" x="20" y="44" width="374" height="818"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="SeJ-yb-zQa"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="SeJ-yb-zQa" firstAttribute="bottom" secondItem="t28-lo-QgF" secondAttribute="bottom" id="6bh-di-jDH"/>
+                            <constraint firstItem="SeJ-yb-zQa" firstAttribute="trailing" secondItem="t28-lo-QgF" secondAttribute="trailing" constant="20" id="FFM-uJ-l9c"/>
+                            <constraint firstItem="t28-lo-QgF" firstAttribute="top" secondItem="SeJ-yb-zQa" secondAttribute="top" id="I2h-4V-3ME"/>
+                            <constraint firstItem="t28-lo-QgF" firstAttribute="leading" secondItem="SeJ-yb-zQa" secondAttribute="leading" constant="20" id="xfM-HC-WNp"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imagePreviewView" destination="t28-lo-QgF" id="lvI-z0-3RW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z50-Su-6Pw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2150.7246376811595" y="139.95535714285714"/>
         </scene>
     </scenes>
     <resources>
